--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <!-- Навигация по сайту -->
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="./index.html" class="nav-link active-link">Студия</a>
+              <a href="./index.html" class="nav-link nav-current">Студия</a>
             </li>
             <li class="nav-item">
               <a href="./portfolio.html" class="nav-link">Портфолио</a>
