--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
               <a href="./index.html" class="nav-link">Студия</a>
             </li>
             <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link active-link">Портфолио</a>
+              <a href="./portfolio.html" class="nav-link nav-current">Портфолио</a>
             </li>
             <li class="nav-item">
               <a href="" class="nav-link">Контакты</a>
