--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         <!-- Каналы связи со студией -->
         <ul class="comm-list">
           <li class="comm-item">
-            <a href="mailto:info@devstudio.com" class="comm-link">info@devstudio.com</a>
+            <!-- <svg>
+              <use href="./images/svg/symbol-defs.svg#head-email" width="16" heidth="12"></use>
+            </svg> -->
+            <a href="mailto:info@devstudio.com" class="comm-link">info@devstudio.com </a>
           </li>
           <li class="comm-item">
             <a href="tel:+380961111111" class="comm-link">+38 096 111 11 11</a>
@@ -56,12 +59,14 @@
     <!--Основной контент страницы-->
     <main>
       <!--Главное представление студии Секция Герой-->
-      <section class="hero">
-        <div class="container">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="primary-button button">Заказать услугу</button>
-        </div>
-      </section>
+      <div class="overlay">
+        <section class="hero">
+          <div class="container">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="primary-button button">Заказать услугу</button>
+          </div>
+        </section>
+      </div>
 
       <!--Наши преимущества-->
       <section class="section about-section">
@@ -103,7 +108,7 @@
           <ul class="whatwedo-list">
             <li class="whatwedo-item">
               <img
-                src="./images/box1.png"
+                src="./images/box1.jpg"
                 alt="Работа с созданием продукта на планшете"
                 width="370"
                 height="294"
@@ -112,7 +117,7 @@
             </li>
             <li class="whatwedo-item">
               <img
-                src="./images/box2.png"
+                src="./images/box2.jpg"
                 alt="Работа с видом продукта на смартфонах"
                 width="370"
                 height="294"
@@ -121,7 +126,7 @@
             </li>
             <li class="whatwedo-item">
               <img
-                src="./images/box3.png"
+                src="./images/box3.jpg"
                 alt="Выбор цвета на планшете"
                 width="370"
                 height="294"
@@ -188,6 +193,44 @@
                 <h3 class="ourteam-name">Михаил Ермаков</h3>
                 <p class="outrteam-prof">UI Designer</p>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Наши клиенты -->
+      <section class="section">
+        <div class="container">
+          <ul class="clients">
+            <li>
+              <svg>
+                <use href="" alt=""></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="" alt=""></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="" alt=""></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="" alt=""></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="" alt=""></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="" alt=""></use>
+              </svg>
             </li>
           </ul>
         </div>
