--- a/index.html
+++ b/index.html
@@ -44,13 +44,21 @@
         <!-- Каналы связи со студией -->
         <ul class="comm-list">
           <li class="comm-item">
-            <!-- <svg>
-              <use href="./images/svg/symbol-defs.svg#head-email" width="16" heidth="12"></use>
-            </svg> -->
-            <a href="mailto:info@devstudio.com" class="comm-link">info@devstudio.com </a>
+            <a href="mailto:info@devstudio.com" class="comm-link">
+              <svg class="icon icon-mail">
+                <use href="./images/svg/symbol-defs.svg#head-email"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
+
           <li class="comm-item">
-            <a href="tel:+380961111111" class="comm-link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="comm-link">
+              <svg class="icon icon-tel" width="10" height="16">
+                <use href="./images/svg/symbol-defs.svg#head-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -74,24 +82,48 @@
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="about-list">
             <li class="about-item">
+              <div class="icon-container">
+                <svg class="icon about-icon">
+                  <use href="./images/svg/symbol-defs.svg#about-antenna"></use>
+                </svg>
+              </div>
+
               <h3 class="about-title">Внимание к деталям</h3>
               <p class="about-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="about-item">
+              <div class="icon-container">
+                <svg class="icon about-icon">
+                  <use href="./images/svg/symbol-defs.svg#about-clock"></use>
+                </svg>
+              </div>
+
               <h3 class="about-title">Пунктуальность</h3>
               <p class="about-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="about-item">
+              <div class="icon-container">
+                <svg class="icon about-icon">
+                  <use href="./images/svg/symbol-defs.svg#about-diagram"></use>
+                </svg>
+              </div>
+
               <h3 class="about-title">Планирование</h3>
               <p class="about-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="about-item">
+              <div class="icon-container">
+                <svg class="icon about-icon">
+                  <use href="./images/svg/symbol-defs.svg#about-astronaut"></use>
+                </svg>
+              </div>
+
               <h3 class="about-title">Современные технологии</h3>
               <p class="about-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -180,6 +212,36 @@
                 <h3 class="ourteam-name">Николай Тарасов</h3>
                 <p class="outrteam-prof">Marketing</p>
               </div>
+              <ul class="team-social-list">
+                <li class="team-social-item">
+                  <a href="https://www.instagram.com/">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://twitter.com">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://www.facebook.com">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://www.linkedin.com/">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="ourteam-item">
               <img
@@ -198,39 +260,64 @@
         </div>
       </section>
 
-      <!-- Наши клиенты -->
+      <!-- Постоянные клиенты -->
       <section class="section">
         <div class="container">
-          <ul class="clients">
-            <li>
-              <svg>
-                <use href="" alt=""></use>
-              </svg>
+          <h2 class="client-title title-seclion">Постоянные клиенты</h2>
+          <ul class="client-list">
+            <li class="client-item">
+              <div class="client-container">
+                <a href="">
+                  <svg class="icon client-icon">
+                    <use href="./images/svg/symbol-defs.svg#client-1"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
-            <li>
-              <svg>
-                <use href="" alt=""></use>
-              </svg>
+            <li class="client-item">
+              <div class="client-container">
+                <a href="">
+                  <svg class="icon client-icon">
+                    <use href="./images/svg/symbol-defs.svg#client-2"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
-            <li>
-              <svg>
-                <use href="" alt=""></use>
-              </svg>
+            <li class="client-item">
+              <div class="client-container">
+                <a href="">
+                  <svg class="icon client-icon">
+                    <use href="./images/svg/symbol-defs.svg#client-3"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
-            <li>
-              <svg>
-                <use href="" alt=""></use>
-              </svg>
+            <li class="client-item">
+              <div class="client-container">
+                <a href="">
+                  <svg class="icon client-icon">
+                    <use href="./images/svg/symbol-defs.svg#client-4"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
-            <li>
-              <svg>
-                <use href="" alt=""></use>
-              </svg>
+            <li class="client-item">
+              <div class="client-container">
+                <a href="">
+                  <svg class="icon client-icon">
+                    <use href="./images/svg/symbol-defs.svg#client-5"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
-            <li>
-              <svg>
-                <use href="" alt=""></use>
-              </svg>
+            <li class="client-item">
+              <div class="client-container">
+                <a href="">
+                  <svg class="icon client-icon">
+                    <use href="./images/svg/symbol-defs.svg#client-6"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
           </ul>
         </div>
