Added footer and our clients

--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
         <div class="container">
           <h2 class="ourteam-titel title-seclion">Наша команда</h2>
           <ul class="ourteam-list">
+            <!-- Игорь Демьяненко -->
             <li class="ourteam-item">
               <img
                 src="./images/our-comand/img0.jpg"
@@ -186,7 +187,38 @@
                 <h3 class="ourteam-name">Игорь Демьяненко</h3>
                 <p class="outrteam-prof">Product Designer</p>
               </div>
+              <ul class="team-social-list">
+                <li class="team-social-item">
+                  <a href="https://www.instagram.com/" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://twitter.com" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://www.facebook.com" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://www.linkedin.com/" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
+            <!-- Ольга Репина -->
             <li class="ourteam-item">
               <img
                 src="./images/our-comand/img1.jpg"
@@ -199,7 +231,38 @@
                 <h3 class="ourteam-name">Ольга Репина</h3>
                 <p class="outrteam-prof">Frontend Developer</p>
               </div>
+              <ul class="team-social-list">
+                <li class="team-social-item">
+                  <a href="https://www.instagram.com/" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://twitter.com" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://www.facebook.com" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://www.linkedin.com/" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
+            <!-- Николай Тарасов -->
             <li class="ourteam-item">
               <img
                 src="./images/our-comand/img2.jpg"
@@ -214,28 +277,28 @@
               </div>
               <ul class="team-social-list">
                 <li class="team-social-item">
-                  <a href="https://www.instagram.com/">
+                  <a href="https://www.instagram.com/" class="link-social">
                     <svg class="icon team-social-icon">
                       <use href="./images/svg/symbol-defs.svg#team-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="https://twitter.com">
+                  <a href="https://twitter.com" class="link-social">
                     <svg class="icon team-social-icon">
                       <use href="./images/svg/symbol-defs.svg#team-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="https://www.facebook.com">
+                  <a href="https://www.facebook.com" class="link-social">
                     <svg class="icon team-social-icon">
                       <use href="./images/svg/symbol-defs.svg#team-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
-                  <a href="https://www.linkedin.com/">
+                  <a href="https://www.linkedin.com/" class="link-social">
                     <svg class="icon team-social-icon">
                       <use href="./images/svg/symbol-defs.svg#team-linkedin"></use>
                     </svg>
@@ -243,6 +306,7 @@
                 </li>
               </ul>
             </li>
+            <!-- Михаил Ермаков -->
             <li class="ourteam-item">
               <img
                 src="./images/our-comand/img3.jpg"
@@ -255,6 +319,36 @@
                 <h3 class="ourteam-name">Михаил Ермаков</h3>
                 <p class="outrteam-prof">UI Designer</p>
               </div>
+              <ul class="team-social-list">
+                <li class="team-social-item">
+                  <a href="https://www.instagram.com/" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://twitter.com" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://www.facebook.com" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="https://www.linkedin.com/" class="link-social">
+                    <svg class="icon team-social-icon">
+                      <use href="./images/svg/symbol-defs.svg#team-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -266,55 +360,53 @@
           <h2 class="client-title title-seclion">Постоянные клиенты</h2>
           <ul class="client-list">
             <li class="client-item">
+              <a href="" class="client-link">
+                <svg class="icon client-icon">
+                  <use href="./images/svg/symbol-defs.svg#icon-client-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
               <div class="client-container">
-                <a href="">
+                <a href="" class="client-link">
                   <svg class="icon client-icon">
-                    <use href="./images/svg/symbol-defs.svg#client-1"></use>
+                    <use href="./images/svg/symbol-defs.svg#icon-client-2"></use>
                   </svg>
                 </a>
               </div>
             </li>
             <li class="client-item">
               <div class="client-container">
-                <a href="">
+                <a href="" class="client-link">
                   <svg class="icon client-icon">
-                    <use href="./images/svg/symbol-defs.svg#client-2"></use>
+                    <use href="./images/svg/symbol-defs.svg#icon-client-3"></use>
                   </svg>
                 </a>
               </div>
             </li>
             <li class="client-item">
               <div class="client-container">
-                <a href="">
+                <a href="" class="client-link">
                   <svg class="icon client-icon">
-                    <use href="./images/svg/symbol-defs.svg#client-3"></use>
+                    <use href="./images/svg/symbol-defs.svg#icon-client-4"></use>
                   </svg>
                 </a>
               </div>
             </li>
             <li class="client-item">
               <div class="client-container">
-                <a href="">
+                <a href="" class="client-link">
                   <svg class="icon client-icon">
-                    <use href="./images/svg/symbol-defs.svg#client-4"></use>
+                    <use href="./images/svg/symbol-defs.svg#icon-client-5"></use>
                   </svg>
                 </a>
               </div>
             </li>
             <li class="client-item">
               <div class="client-container">
-                <a href="">
+                <a href="" class="client-link">
                   <svg class="icon client-icon">
-                    <use href="./images/svg/symbol-defs.svg#client-5"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-            <li class="client-item">
-              <div class="client-container">
-                <a href="">
-                  <svg class="icon client-icon">
-                    <use href="./images/svg/symbol-defs.svg#client-6"></use>
+                    <use href="./images/svg/symbol-defs.svg#icon-client-6"></use>
                   </svg>
                 </a>
               </div>
@@ -326,22 +418,63 @@
 
     <!--Footer-->
     <footer class="footer">
+      <h2 class="visually-hidden">Подвал сайта</h2>
       <div class="container">
-        <a href="./index.html" lang="en" class="logo footer-logo">
-          <span class="logo-web">Web</span><span class="footer-logo-studio">Studio</span>
-        </a>
+        <div class="footer-container">
+          <div class="address-container">
+            <a href="./index.html" lang="en" class="logo footer-logo">
+              <span class="logo-web">Web</span><span class="footer-logo-studio">Studio</span>
+            </a>
 
-        <address class="address">
-          <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul>
-            <li class="address-item">
-              <a href="mailto:info@example.com" class="footer-comm"> info@example.com </a>
-            </li>
-            <li class="address-item">
-              <a href="tel:+380991111111" class="footer-comm"> +38 099 111 11 11 </a>
-            </li>
-          </ul>
-        </address>
+            <address class="address">
+              <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+              <ul>
+                <li class="address-item">
+                  <a href="mailto:info@example.com" class="footer-comm"> info@example.com </a>
+                </li>
+                <li class="address-item">
+                  <a href="tel:+380991111111" class="footer-comm"> +38 099 111 11 11 </a>
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="footer-social">
+            <h2 class="visually-hidden">Социальные сети студии</h2>
+            <h3 class="footer-social-title">Присоединяйтесь</h3>
+            <ul class="footer-social-list">
+              <li class="footer-social-item">
+                <a href="https://www.instagram.com/" class="footer-link-social">
+                  <svg class="icon footer-social-icon">
+                    <use href="./images/svg/symbol-defs.svg#footer-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="https://twitter.com" class="footer-link-social">
+                  <svg class="icon footer-social-icon">
+                    <use href="./images/svg/symbol-defs.svg#footer-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="https://www.facebook.com" class="footer-link-social">
+                  <svg class="icon footer-social-icon">
+                    <use href="./images/svg/symbol-defs.svg#footer-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="https://www.linkedin.com/" class="footer-link-social">
+                  <svg class="icon footer-social-icon">
+                    <use href="./images/svg/symbol-defs.svg#footer-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Социальные сети студии -->
       </div>
     </footer>
   </body>
