--- a/portfolio.html
+++ b/portfolio.html
@@ -44,10 +44,21 @@
         <!-- Каналы связи со студией -->
         <ul class="comm-list">
           <li class="comm-item">
-            <a href="mailto:info@devstudio.com" class="comm-link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="comm-link">
+              <svg class="icon icon-mail">
+                <use href="./images/svg/symbol-defs.svg#head-email"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
+
           <li class="comm-item">
-            <a href="tel:+380961111111" class="comm-link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="comm-link">
+              <svg class="icon icon-tel" width="10" height="16">
+                <use href="./images/svg/symbol-defs.svg#head-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -58,8 +69,8 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Портфолио Веб-Студии</h1>
-          <!-- Наши услуги -->
-          <h2 class="visually-hidden">Список наших услуг</h2>
+          <!-- Фильтр по нашим проектам -->
+          <h2 class="visually-hidden">Фильтр по нашим проектам</h2>
           <ul class="servece-list">
             <li class="list-btn">
               <button type="button" class="service-button button">Все</button>
@@ -196,22 +207,63 @@
 
     <!--Footer-->
     <footer class="footer">
+      <h2 class="visually-hidden">Подвал сайта</h2>
       <div class="container">
-        <a href="./index.html" lang="en" class="logo footer-logo">
-          <span class="logo-web">Web</span><span class="footer-logo-studio">Studio</span>
-        </a>
+        <div class="footer-container">
+          <div class="address-container">
+            <a href="./index.html" lang="en" class="logo footer-logo">
+              <span class="logo-web">Web</span><span class="footer-logo-studio">Studio</span>
+            </a>
 
-        <address class="address">
-          <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul>
-            <li class="address-item">
-              <a href="mailto:info@example.com" class="footer-comm"> info@example.com </a>
-            </li>
-            <li class="address-item">
-              <a href="tel:+380991111111" class="footer-comm"> +38 099 111 11 11 </a>
-            </li>
-          </ul>
-        </address>
+            <address class="address">
+              <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+              <ul>
+                <li class="address-item">
+                  <a href="mailto:info@example.com" class="footer-comm"> info@example.com </a>
+                </li>
+                <li class="address-item">
+                  <a href="tel:+380991111111" class="footer-comm"> +38 099 111 11 11 </a>
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="footer-social">
+            <h2 class="visually-hidden">Социальные сети студии</h2>
+            <h3 class="footer-social-title">Присоединяйтесь</h3>
+            <ul class="footer-social-list">
+              <li class="footer-social-item">
+                <a href="https://www.instagram.com/" class="footer-link-social">
+                  <svg class="icon footer-social-icon">
+                    <use href="./images/svg/symbol-defs.svg#footer-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="https://twitter.com" class="footer-link-social">
+                  <svg class="icon footer-social-icon">
+                    <use href="./images/svg/symbol-defs.svg#footer-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="https://www.facebook.com" class="footer-link-social">
+                  <svg class="icon footer-social-icon">
+                    <use href="./images/svg/symbol-defs.svg#footer-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="https://www.linkedin.com/" class="footer-link-social">
+                  <svg class="icon footer-social-icon">
+                    <use href="./images/svg/symbol-defs.svg#footer-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Социальные сети студии -->
       </div>
     </footer>
   </body>
