ЧИТАЙ ТЕХНИЧЕСКОЕ ЗАДАНИЕ!

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <ul class="comm-list">
           <li class="comm-item">
             <a href="mailto:info@devstudio.com" class="comm-link">
-              <svg class="icon icon-mail">
-                <use href="./images/svg/symbol-defs.svg#head-email"></use>
+              <svg class="icon icon-mail" wifth="16" height="12">
+                <use href="./images/svg/icon.svg#head-email"></use>
               </svg>
               info@devstudio.com
             </a>
@@ -55,7 +55,7 @@
           <li class="comm-item">
             <a href="tel:+380961111111" class="comm-link">
               <svg class="icon icon-tel" width="10" height="16">
-                <use href="./images/svg/symbol-defs.svg#head-smartphone"></use>
+                <use href="./images/svg/icon.svg#head-smartphone"></use>
               </svg>
               +38 096 111 11 11
             </a>
@@ -83,8 +83,8 @@
           <ul class="about-list">
             <li class="about-item">
               <div class="icon-container">
-                <svg class="icon about-icon">
-                  <use href="./images/svg/symbol-defs.svg#about-antenna"></use>
+                <svg class="icon about-icon" width="70" height="70">
+                  <use href="./images/svg/icon.svg#about-antenna"></use>
                 </svg>
               </div>
 
@@ -95,8 +95,8 @@
             </li>
             <li class="about-item">
               <div class="icon-container">
-                <svg class="icon about-icon">
-                  <use href="./images/svg/symbol-defs.svg#about-clock"></use>
+                <svg class="icon about-icon" width="70" height="70">
+                  <use href="./images/svg/icon.svg#about-clock"></use>
                 </svg>
               </div>
 
@@ -107,8 +107,8 @@
             </li>
             <li class="about-item">
               <div class="icon-container">
-                <svg class="icon about-icon">
-                  <use href="./images/svg/symbol-defs.svg#about-diagram"></use>
+                <svg class="icon about-icon" width="70" height="70">
+                  <use href="./images/svg/icon.svg#about-diagram"></use>
                 </svg>
               </div>
 
@@ -119,8 +119,8 @@
             </li>
             <li class="about-item">
               <div class="icon-container">
-                <svg class="icon about-icon">
-                  <use href="./images/svg/symbol-defs.svg#about-astronaut"></use>
+                <svg class="icon about-icon" width="70" height="70">
+                  <use href="./images/svg/icon.svg#about-astronaut"></use>
                 </svg>
               </div>
 
@@ -190,29 +190,29 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="https://www.instagram.com/" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-instagram"></use>
+                    <svg class="icon team-social-icon" wifth="70" height="70">
+                      <use href="./images/svg/icon.svg#team-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://twitter.com" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-twitter"></use>
+                    <svg class="icon team-social-icon" wifth="70" height="70">
+                      <use href="./images/svg/icon.svg#team-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.facebook.com" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-facebook"></use>
+                    <svg class="icon team-social-icon" wifth="70" height="70">
+                      <use href="./images/svg/icon.svg#team-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.linkedin.com/" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-linkedin"></use>
+                    <svg class="icon team-social-icon" wifth="70" height="70">
+                      <use href="./images/svg/icon.svg#team-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -234,29 +234,29 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="https://www.instagram.com/" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-instagram"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://twitter.com" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-twitter"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.facebook.com" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-facebook"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.linkedin.com/" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-linkedin"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -278,29 +278,29 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="https://www.instagram.com/" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-instagram"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://twitter.com" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-twitter"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.facebook.com" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-facebook"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.linkedin.com/" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-linkedin"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -322,29 +322,29 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="https://www.instagram.com/" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-instagram"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://twitter.com" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-twitter"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.facebook.com" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-facebook"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.linkedin.com/" class="link-social">
-                    <svg class="icon team-social-icon">
-                      <use href="./images/svg/symbol-defs.svg#team-linkedin"></use>
+                    <svg class="icon team-social-icon" width="20" height="20">
+                      <use href="./images/svg/icon.svg#team-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -361,16 +361,16 @@
           <ul class="client-list">
             <li class="client-item">
               <a href="" class="client-link">
-                <svg class="icon client-icon">
-                  <use href="./images/svg/symbol-defs.svg#icon-client-1"></use>
+                <svg class="icon client-icon" width="106" height="60">
+                  <use href="./images/svg/icon.svg#icon-client-1"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <div class="client-container">
                 <a href="" class="client-link">
-                  <svg class="icon client-icon">
-                    <use href="./images/svg/symbol-defs.svg#icon-client-2"></use>
+                  <svg class="icon client-icon" width="106" height="60">
+                    <use href="./images/svg/icon.svg#icon-client-2"></use>
                   </svg>
                 </a>
               </div>
@@ -378,8 +378,8 @@
             <li class="client-item">
               <div class="client-container">
                 <a href="" class="client-link">
-                  <svg class="icon client-icon">
-                    <use href="./images/svg/symbol-defs.svg#icon-client-3"></use>
+                  <svg class="icon client-icon" width="106" height="60">
+                    <use href="./images/svg/icon.svg#icon-client-3"></use>
                   </svg>
                 </a>
               </div>
@@ -387,8 +387,8 @@
             <li class="client-item">
               <div class="client-container">
                 <a href="" class="client-link">
-                  <svg class="icon client-icon">
-                    <use href="./images/svg/symbol-defs.svg#icon-client-4"></use>
+                  <svg class="icon client-icon" width="106" height="60">
+                    <use href="./images/svg/icon.svg#icon-client-4"></use>
                   </svg>
                 </a>
               </div>
@@ -396,8 +396,8 @@
             <li class="client-item">
               <div class="client-container">
                 <a href="" class="client-link">
-                  <svg class="icon client-icon">
-                    <use href="./images/svg/symbol-defs.svg#icon-client-5"></use>
+                  <svg class="icon client-icon" width="106" height="60">
+                    <use href="./images/svg/icon.svg#icon-client-5"></use>
                   </svg>
                 </a>
               </div>
@@ -405,8 +405,8 @@
             <li class="client-item">
               <div class="client-container">
                 <a href="" class="client-link">
-                  <svg class="icon client-icon">
-                    <use href="./images/svg/symbol-defs.svg#icon-client-6"></use>
+                  <svg class="icon client-icon" width="106" height="60">
+                    <use href="./images/svg/icon.svg#icon-client-6"></use>
                   </svg>
                 </a>
               </div>
@@ -445,29 +445,29 @@
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a href="https://www.instagram.com/" class="footer-link-social">
-                  <svg class="icon footer-social-icon">
-                    <use href="./images/svg/symbol-defs.svg#footer-instagram"></use>
+                  <svg class="icon footer-social-icon" width="20" height="20">
+                    <use href="./images/svg/icon.svg#footer-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://twitter.com" class="footer-link-social">
-                  <svg class="icon footer-social-icon">
-                    <use href="./images/svg/symbol-defs.svg#footer-twitter"></use>
+                  <svg class="icon footer-social-icon" width="20" height="20">
+                    <use href="./images/svg/icon.svg#footer-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://www.facebook.com" class="footer-link-social">
-                  <svg class="icon footer-social-icon">
-                    <use href="./images/svg/symbol-defs.svg#footer-facebook"></use>
+                  <svg class="icon footer-social-icon" width="20" height="20">
+                    <use href="./images/svg/icon.svg#footer-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://www.linkedin.com/" class="footer-link-social">
-                  <svg class="icon footer-social-icon">
-                    <use href="./images/svg/symbol-defs.svg#footer-linkedin"></use>
+                  <svg class="icon footer-social-icon" width="20" height="20">
+                    <use href="./images/svg/icon.svg#footer-linkedin"></use>
                   </svg>
                 </a>
               </li>
