--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,8 @@
         <ul class="comm-list">
           <li class="comm-item">
             <a href="mailto:info@devstudio.com" class="comm-link">
-              <svg class="icon icon-mail">
-                <use href="./images/svg/symbol-defs.svg#head-email"></use>
+              <svg class="icon icon-mail" width="16" height="12">
+                <use href="./images/svg/icon.svg#head-email"></use>
               </svg>
               info@devstudio.com
             </a>
@@ -55,7 +55,7 @@
           <li class="comm-item">
             <a href="tel:+380961111111" class="comm-link">
               <svg class="icon icon-tel" width="10" height="16">
-                <use href="./images/svg/symbol-defs.svg#head-smartphone"></use>
+                <use href="./images/svg/icon.svg#head-smartphone"></use>
               </svg>
               +38 096 111 11 11
             </a>
@@ -227,43 +227,42 @@
               </ul>
             </address>
           </div>
-
+          <!-- Социальные сети студии -->
           <div class="footer-social">
             <h2 class="visually-hidden">Социальные сети студии</h2>
             <h3 class="footer-social-title">Присоединяйтесь</h3>
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a href="https://www.instagram.com/" class="footer-link-social">
-                  <svg class="icon footer-social-icon">
-                    <use href="./images/svg/symbol-defs.svg#footer-instagram"></use>
+                  <svg class="icon footer-social-icon" width="20" height="20">
+                    <use href="./images/svg/icon.svg#footer-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://twitter.com" class="footer-link-social">
-                  <svg class="icon footer-social-icon">
-                    <use href="./images/svg/symbol-defs.svg#footer-twitter"></use>
+                  <svg class="icon footer-social-icon" width="20" height="20">
+                    <use href="./images/svg/icon.svg#footer-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://www.facebook.com" class="footer-link-social">
-                  <svg class="icon footer-social-icon">
-                    <use href="./images/svg/symbol-defs.svg#footer-facebook"></use>
+                  <svg class="icon footer-social-icon" width="20" height="20">
+                    <use href="./images/svg/icon.svg#footer-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://www.linkedin.com/" class="footer-link-social">
-                  <svg class="icon footer-social-icon">
-                    <use href="./images/svg/symbol-defs.svg#footer-linkedin"></use>
+                  <svg class="icon footer-social-icon" width="20" height="20">
+                    <use href="./images/svg/icon.svg#footer-linkedin"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
         </div>
-        <!-- Социальные сети студии -->
       </div>
     </footer>
   </body>
