Correct css for icon

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ul class="comm-list">
           <li class="comm-item">
             <a href="mailto:info@devstudio.com" class="comm-link">
-              <svg class="icon icon-mail" wifth="16" height="12">
+              <svg class="icon icon-mail" width="16" height="12">
                 <use href="./images/svg/icon.svg#head-email"></use>
               </svg>
               info@devstudio.com
@@ -190,28 +190,28 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="https://www.instagram.com/" class="link-social">
-                    <svg class="icon team-social-icon" wifth="70" height="70">
+                    <svg class="icon team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://twitter.com" class="link-social">
-                    <svg class="icon team-social-icon" wifth="70" height="70">
+                    <svg class="icon team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.facebook.com" class="link-social">
-                    <svg class="icon team-social-icon" wifth="70" height="70">
+                    <svg class="icon team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.linkedin.com/" class="link-social">
-                    <svg class="icon team-social-icon" wifth="70" height="70">
+                    <svg class="icon team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-linkedin"></use>
                     </svg>
                   </a>
