--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
         <ul class="comm-list">
           <li class="comm-item">
             <a href="mailto:info@devstudio.com" class="comm-link">
-              <svg class="icon icon-mail" width="16" height="12">
+              <svg class="icon-mail" width="16" height="12">
                 <use href="./images/svg/icon.svg#head-email"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-
+          <!-- icon.svg#head-smartphone -->
           <li class="comm-item">
             <a href="tel:+380961111111" class="comm-link">
-              <svg class="icon icon-tel" width="10" height="16">
+              <svg class="icon-tel" width="10" height="16">
                 <use href="./images/svg/icon.svg#head-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -83,7 +83,7 @@
           <ul class="about-list">
             <li class="about-item">
               <div class="icon-container">
-                <svg class="icon about-icon" width="70" height="70">
+                <svg class="about-icon" width="70" height="70">
                   <use href="./images/svg/icon.svg#about-antenna"></use>
                 </svg>
               </div>
@@ -95,7 +95,7 @@
             </li>
             <li class="about-item">
               <div class="icon-container">
-                <svg class="icon about-icon" width="70" height="70">
+                <svg class="about-icon" width="70" height="70">
                   <use href="./images/svg/icon.svg#about-clock"></use>
                 </svg>
               </div>
@@ -107,7 +107,7 @@
             </li>
             <li class="about-item">
               <div class="icon-container">
-                <svg class="icon about-icon" width="70" height="70">
+                <svg class="about-icon" width="70" height="70">
                   <use href="./images/svg/icon.svg#about-diagram"></use>
                 </svg>
               </div>
@@ -119,7 +119,7 @@
             </li>
             <li class="about-item">
               <div class="icon-container">
-                <svg class="icon about-icon" width="70" height="70">
+                <svg class="about-icon" width="70" height="70">
                   <use href="./images/svg/icon.svg#about-astronaut"></use>
                 </svg>
               </div>
@@ -190,28 +190,28 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="https://www.instagram.com/" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://twitter.com" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.facebook.com" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.linkedin.com/" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-linkedin"></use>
                     </svg>
                   </a>
@@ -234,28 +234,28 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="https://www.instagram.com/" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://twitter.com" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.facebook.com" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.linkedin.com/" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-linkedin"></use>
                     </svg>
                   </a>
@@ -278,28 +278,28 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="https://www.instagram.com/" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://twitter.com" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.facebook.com" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.linkedin.com/" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-linkedin"></use>
                     </svg>
                   </a>
@@ -322,28 +322,28 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="https://www.instagram.com/" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://twitter.com" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.facebook.com" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="https://www.linkedin.com/" class="link-social">
-                    <svg class="icon team-social-icon" width="20" height="20">
+                    <svg class="team-social-icon" width="20" height="20">
                       <use href="./images/svg/icon.svg#team-linkedin"></use>
                     </svg>
                   </a>
@@ -361,7 +361,7 @@
           <ul class="client-list">
             <li class="client-item">
               <a href="" class="client-link">
-                <svg class="icon client-icon" width="106" height="60">
+                <svg class="client-icon" width="106" height="60">
                   <use href="./images/svg/icon.svg#icon-client-1"></use>
                 </svg>
               </a>
@@ -369,7 +369,7 @@
             <li class="client-item">
               <div class="client-container">
                 <a href="" class="client-link">
-                  <svg class="icon client-icon" width="106" height="60">
+                  <svg class="client-icon" width="106" height="60">
                     <use href="./images/svg/icon.svg#icon-client-2"></use>
                   </svg>
                 </a>
@@ -378,7 +378,7 @@
             <li class="client-item">
               <div class="client-container">
                 <a href="" class="client-link">
-                  <svg class="icon client-icon" width="106" height="60">
+                  <svg class="client-icon" width="106" height="60">
                     <use href="./images/svg/icon.svg#icon-client-3"></use>
                   </svg>
                 </a>
@@ -387,7 +387,7 @@
             <li class="client-item">
               <div class="client-container">
                 <a href="" class="client-link">
-                  <svg class="icon client-icon" width="106" height="60">
+                  <svg class="client-icon" width="106" height="60">
                     <use href="./images/svg/icon.svg#icon-client-4"></use>
                   </svg>
                 </a>
@@ -396,7 +396,7 @@
             <li class="client-item">
               <div class="client-container">
                 <a href="" class="client-link">
-                  <svg class="icon client-icon" width="106" height="60">
+                  <svg class="client-icon" width="106" height="60">
                     <use href="./images/svg/icon.svg#icon-client-5"></use>
                   </svg>
                 </a>
@@ -405,7 +405,7 @@
             <li class="client-item">
               <div class="client-container">
                 <a href="" class="client-link">
-                  <svg class="icon client-icon" width="106" height="60">
+                  <svg class="client-icon" width="106" height="60">
                     <use href="./images/svg/icon.svg#icon-client-6"></use>
                   </svg>
                 </a>
@@ -445,28 +445,28 @@
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a href="https://www.instagram.com/" class="footer-link-social">
-                  <svg class="icon footer-social-icon" width="20" height="20">
+                  <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/svg/icon.svg#footer-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://twitter.com" class="footer-link-social">
-                  <svg class="icon footer-social-icon" width="20" height="20">
+                  <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/svg/icon.svg#footer-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://www.facebook.com" class="footer-link-social">
-                  <svg class="icon footer-social-icon" width="20" height="20">
+                  <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/svg/icon.svg#footer-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://www.linkedin.com/" class="footer-link-social">
-                  <svg class="icon footer-social-icon" width="20" height="20">
+                  <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/svg/icon.svg#footer-linkedin"></use>
                   </svg>
                 </a>
