--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
         <ul class="comm-list">
           <li class="comm-item">
             <a href="mailto:info@devstudio.com" class="comm-link">
-              <svg class="icon icon-mail" width="16" height="12">
+              <svg class="icon-mail" width="16" height="12">
                 <use href="./images/svg/icon.svg#head-email"></use>
               </svg>
               info@devstudio.com
@@ -54,7 +54,7 @@
 
           <li class="comm-item">
             <a href="tel:+380961111111" class="comm-link">
-              <svg class="icon icon-tel" width="10" height="16">
+              <svg class="icon-tel" width="10" height="16">
                 <use href="./images/svg/icon.svg#head-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -234,28 +234,28 @@
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a href="https://www.instagram.com/" class="footer-link-social">
-                  <svg class="icon footer-social-icon" width="20" height="20">
+                  <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/svg/icon.svg#footer-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://twitter.com" class="footer-link-social">
-                  <svg class="icon footer-social-icon" width="20" height="20">
+                  <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/svg/icon.svg#footer-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://www.facebook.com" class="footer-link-social">
-                  <svg class="icon footer-social-icon" width="20" height="20">
+                  <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/svg/icon.svg#footer-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
                 <a href="https://www.linkedin.com/" class="footer-link-social">
-                  <svg class="icon footer-social-icon" width="20" height="20">
+                  <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/svg/icon.svg#footer-linkedin"></use>
                   </svg>
                 </a>
